--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,59 @@
   </head>
 
   <body>
+  <% if @current_user == nil %>
+   <ul>
+      <li>
+        <a href="/users">
+          All users
+        </a>
+      </li>
+      
+      <li>
+        <a href="/photos">
+          All public photos
+        </a>
+      </li>
+
+        <li>
+          <a href="/user_sign_in">
+            Sign in
+          </a>
+        </li>
+
+        <li>
+          <a href="/user_sign_up">
+            Sign up
+          </a>
+        </li>
+    </ul>
+    <% else %>
+       <ul>
+      <li>
+        <a href="/users">
+          All users
+        </a>
+      </li>
+      
+      <li>
+        <a href="/photos">
+          All public photos
+        </a>
+      </li>
+
+        <li>
+          <a href="/edit_user_profile">
+            bob
+          </a>
+        </li>
+
+        <li>
+          <a href="/user_sign_out">
+            Sign out
+          </a>
+        </li>
+    </ul>
+    <% end %>
     <%= yield %>
   </body>
 </html>
