--- a/app/views/user_authentication/index.html.erb
+++ b/app/views/user_authentication/index.html.erb
@@ -1,14 +1,11 @@
 <div>
   <div>
     <h1>
-      List of all likes
+      List of users
     </h1>
   </div>
 </div>
 
-<hr>
-
-<hr>
 <div>
   <div>
     <table border="1">
