--- a/app/views/user_authentication/index.html.erb
+++ b/app/views/user_authentication/index.html.erb
@@ -35,7 +35,7 @@
         </td>
 
         <td>
-          <%= user.private %>
+          <%= user.private ? "Yes" : "No" %>
         </td>
 
         <td>
