--- a/app/views/user_authentication/index.html.erb
+++ b/app/views/user_authentication/index.html.erb
@@ -49,7 +49,7 @@
         </td>
 
         <td>
-          <a href="/user_authentication/<%= user.id %>">
+          <a href="/users/<%= user.username %>">
             Show details
           </a>
         </td>
