--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
 
         <li>
           <a href="/edit_user_profile">
-            <%= user.username %>
+            <%= @user.username %>
           </a>
         </li>
 
