--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,8 +59,9 @@
 
         <li>
           <a href="/edit_user_profile">
-            <%= @user.username %>
+            <%= @current_user.username %>
           </a>
+         
         </li>
 
         <li>
