--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,66 +1,37 @@
 <div>
   <div>
     <h1>
-      List of all photos
+      List of photos
     </h1>
   </div>
 </div>
 
-<hr>
-
 <div>
   <div>
-    <h2>
-      Add a new photo
-    </h2>
 
-    <form action="/insert_photo" method="post">
-      <div>
-        <label for="caption_box">
-          Caption
-        </label>
+    <% if @current_user != nil %>
 
-        <textarea id="caption_box" name="query_caption" rows="3"></textarea>
-      </div>
+      <form action="/insert_photo" method="post" enctype="multipart/form-data">
 
-      <div>
-        <label for="comments_count_box">
-          Comments count
-        </label>
+        <div>
+          <label for="image">
+            Image
+          </label>
+          <input id="image" type="file" name="image" placeholder="Enter a URL for the image...">
 
-        <input type="text" id="comments_count_box" name="query_comments_count">
-      </div>
+          <label for="caption_box">
+            Caption
+          </label>
 
-      <div>
-        <label for="image_box">
-          Image
-        </label>
+          <textarea id="caption_box" name="query_caption" rows="3" placeholder="Enter a caption for the photo..."></textarea>
 
-        <input type="file" id="image" name="image" class="form-control">
-      </div>
+          <button>
+            Add photo
+          </button>
+        </div>
+      </form>
 
-      <div>
-        <label for="likes_count_box">
-          Likes count
-        </label>
-
-        <form action="/create_user" method="post" class="form-horizontal" enctype="multipart/form-data">
-
-        <input type="text" id="likes_count_box" name="query_likes_count">
-      </div>
-
-      <div>
-        <label for="owner_id_box">
-          Owner
-        </label>
-
-        <input type="text" id="owner_id_box" name="query_owner_id">
-      </div>
-
-      <button>
-        Create photo
-      </button>
-    </form>
+    <% end %>
   </div>
 </div>
 
@@ -69,8 +40,9 @@
   <div>
     <table border="1">
       <tr>
+
         <th>
-          ID
+          Image
         </th>
 
         <th>
@@ -78,75 +50,60 @@
         </th>
 
         <th>
-          Comments count
-        </th>
-
-        <th>
-          Image
-        </th>
-
-        <th>
-          Likes count
-        </th>
-
-        <th>
           Owner
         </th>
 
         <th>
-          Created at
+          Posted
         </th>
 
         <th>
-          Updated at
+          Likes
         </th>
 
         <th>
         </th>
       </tr>
-
       <% @list_of_photos.each do |a_photo| %>
-      <tr>
-        <td>
-          <%= a_photo.id %>
-        </td>
+        <tr>
+<% if a_photo.owner.private == false %>
+          <td>
+            <img src="<%= a_photo.image %>" class="img-responsive">
+          </td>
 
-        <td>
-          <%= a_photo.caption %>
-        </td>
+          <td>
+            <%= a_photo.caption %>
+          </td>
 
-        <td>
-          <%= a_photo.comments_count %>
-        </td>
+          <td>
+            <%= a_photo.owner.username %>
+          </td>
 
-        <td>
-          <%= a_photo.image %>
-        </td>
+          <td>
+            <%= time_ago_in_words(a_photo.created_at) %> ago
+          </td>
+          <td>
+            <%= a_photo.likes_count %>
+          </td>
 
-        <td>
-          <%= a_photo.likes_count %>
-        </td>
+          <% if @current_user == nil %>
 
-        <td>
-          <%= a_photo.owner_id %>
-        </td>
+            <td>
+              <a href="/user_sign_in">
+                Show details
+              </a>
+            </td>
+          <% else %>
+            <td>
+              <a href="/photos/<%= a_photo.id %>">
+                Show details
+              </a>
+            </td>
 
-        <td>
-          <%= time_ago_in_words(a_photo.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(a_photo.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/photos/<%= a_photo.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
+          <% end %>
+        </tr>
+      <% end %>
       <% end %>
     </table>
   </div>
 </div>
-
-<hr>
