--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,54 +11,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+    <!-- jQuery and Bootstrap JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
   </head>
 
   <body>
-    <ul>
-      <li>
-        <a href="/users">
-          All users
-        </a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">PhotogramFinal</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/users">All users</a>
       </li>
-
-      <li>
-        <a href="/photos">
-          All public photos
-        </a>
+      <li class="nav-item">
+        <a class="nav-link" href="/photos">All public photos</a>
       </li>
-
+    </ul>
+    <ul class="navbar-nav">
       <% if @current_user != nil%>
-        <li>
-          <a href="/edit_user_profile">
-            <%= @current_user.username %>
-          </a>
+        <li class="nav-item">
+          <a class="nav-link" href="/edit_user_profile"><%= @current_user.username %></a>
         </li>
-
-        <li>
-          <a href="/user_sign_out">
-            Sign out
-          </a>
+        <li class="nav-item">
+          <a class="nav-link" href="/user_sign_out">Sign out</a>
         </li>
       <% else %>
-        <li>
-          <a href="/user_sign_in">
-            Sign in
-          </a>
+        <li class="nav-item">
+          <a class="nav-link" href="/user_sign_in">Sign in</a>
         </li>
-
-        <li>
-          <a href="/user_sign_up">
-            Sign up
-          </a>
+        <li class="nav-item">
+          <a class="nav-link" href="/user_sign_up">Sign up</a>
         </li>
       <% end %>
-
     </ul>
-
-    <div>
-      <%= alert %>
-      <%= notice %>
-    </div>
+  </div>
+</nav>
 
     <%= yield %>
   </body>
