--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,72 +1,44 @@
-<div>
-  <div>
-    <h1>
-      List of photos
-    </h1>
+<div class="card">
+  <div class="card-header">
+    <h1>List of photos</h1>
   </div>
-</div>
-
-<div>
-  <div>
-
+  <div class="card-body">
     <% if @current_user != nil %>
-
       <form action="/insert_photo" method="post" enctype="multipart/form-data">
-
-        <div>
-          <label for="image">
-            Image
-          </label>
-          <input id="image" type="file" name="image" placeholder="Enter a URL for the image...">
-
-          <label for="caption_box">
-            Caption
-          </label>
-
-          <textarea id="caption_box" name="query_caption" rows="3" placeholder="Enter a caption for the photo..."></textarea>
-
-          <button>
-            Add photo
-          </button>
+        <div class="form-group">
+          <label for="image">Image</label>
+          <input id="image" type="file" class="form-control-file" name="image" placeholder="Enter a URL for the image...">
         </div>
+        <div class="form-group">
+          <label for="caption_box">Caption</label>
+          <textarea id="caption_box" class="form-control" name="query_caption" rows="3" placeholder="Enter a caption for the photo..."></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Add photo</button>
       </form>
-
     <% end %>
   </div>
 </div>
 
-<hr>
-<div>
-  <div>
-    <table border="1">
-      <tr>
-
-        <th>
-          Image
-        </th>
-
-        <th>
-          Caption
-        </th>
-
-        <th>
-          Owner
-        </th>
-
-        <th>
-          Posted
-        </th>
-
-        <th>
-          Likes
-        </th>
-
-        <th>
-        </th>
-      </tr>
-      <% @list_of_photos.each do |a_photo| %>
+<div class="card">
+  <div class="card-header">
+    <h1 class="card-title">List of photos</h1>
+  </div>
+  <div class="card-body">
+    <table class="table table-bordered">
+      <thead>
         <tr>
-<% if a_photo.owner.private == false %>
+          <th>Image</th>
+          <th>Caption</th>
+          <th>Owner</th>
+          <th>Posted</th>
+          <th>Likes</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @list_of_photos.each do |a_photo| %>
+        <tr>
+          <% if a_photo.owner.private == false %>
           <td>
             <img src="<%= a_photo.image %>" class="img-responsive">
           </td>
@@ -87,23 +59,18 @@
           </td>
 
           <% if @current_user == nil %>
-
-            <td>
-              <a href="/user_sign_in">
-                Show details
-              </a>
-            </td>
+          <td>
+            <a href="/user_sign_in">Show details</a>
+          </td>
           <% else %>
-            <td>
-              <a href="/photos/<%= a_photo.id %>">
-                Show details
-              </a>
-            </td>
-
+          <td>
+            <a href="/photos/<%= a_photo.id %>">Show details</a>
+          </td>
+          <% end %>
           <% end %>
         </tr>
-      <% end %>
-      <% end %>
+        <% end %>
+      </tbody>
     </table>
   </div>
 </div>
