--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,85 +1,76 @@
-<div>
-  <div>
-    <h1>
+<div class="card">
+  <div class="card-header">
+    <h1 class="card-title">
       List of users
     </h1>
   </div>
-</div>
-
-<div>
-  <div>
-    <table border="1">
-      <tr>
-        <th>
-          Username
-        </th>
-
-        <th>
-          Private?
-        </th>
-
-        <th>
-
-        </th>
-
-        <th>
-
-        </th>
-
-      </tr>
-
-      <% @list_of_users.each do |a_user| %>
+  
+  <div class="card-body">
+    <table class="table table-bordered">
+      <thead>
         <tr>
-          <td>
-            <%= a_user.username %>
-          </td>
-          <% if a_user.private == false %>
+          <th>
+            Username
+          </th>
+          <th>
+            Private?
+          </th>
+          <th>
+            Action
+          </th>
+          <th>
+            Details
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @list_of_users.each do |a_user| %>
+          <tr>
             <td>
-              No
+              <%= a_user.username %>
             </td>
-          <% else %>
-            <td>
-              Yes
-            </td>
-          <% end %>
-          <% if @current_user != nil %>
-           <% request = a_user.receivedfollowrequests.where(:sender_id => @current_user.id ).first %>
-            <td>
-
-              <% if request == nil %>
-                <form action="/insert_follow_request" method="post">
-                  <input type="hidden" name="query_recipient_id" value="<%= a_user.id %>">
-                  <button>
-                    Follow
-                  </button>
-                </form>
-
-              <% elsif request.status == "pending" %>
-                Request sent.
-                <a href="/delete_follow_request/<%= %>">
-                  Cancel
-                </a>
-              <% else %>
-                <a href="/delete_follow_request/<%= %>">
-                  Unfollow
-                </a>
-
-              <% end %>
+            <% if a_user.private == false %>
+              <td>
+                No
+              </td>
+            <% else %>
+              <td>
+                Yes
+              </td>
+            <% end %>
+            <% if @current_user != nil %>
+              <% request = a_user.receivedfollowrequests.where(:sender_id => @current_user.id ).first %>
+              <td>
+                <% if request == nil %>
+                  <form action="/insert_follow_request" method="post">
+                    <input type="hidden" name="query_recipient_id" value="<%= a_user.id %>">
+                    <button class="btn btn-primary">
+                      Follow
+                    </button>
+                  </form>
+                <% elsif request.status == "pending" %>
+                  Request sent.
+                  <a href="/delete_follow_request/<%= request.id %>" class="btn btn-secondary">
+                    Cancel
+                  </a>
+                <% else %>
+                  <a href="/delete_follow_request/<%= request.id %>" class="btn btn-danger">
+                    Unfollow
+                  </a>
+                <% end %>
+              </td>
             <% else %>
               <td>
               </td>
-
             <% end %>
-          </td>
-          <td>
-            <a href="/users/<%= a_user.username %>">
-              Show details
-            </a>
-
-          </td>
-        </tr>
-
-      <% end %>
+            <td>
+              <a href="/users/<%= a_user.username %>" class="btn btn-info">
+                Show details
+              </a>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
     </table>
   </div>
 </div>
