--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -1,48 +1,51 @@
-<div>
-  <h1>
-    <%= @current_user.username %>
-  </h1>
+<div class="container">
+  <div class="card">
+    <div class="card-header">
+      <h1 class="card-title">
+        <%= @current_user.username %>
+      </h1>
+    </div>
 
-  <dl>
-    <dt>
-      Private
-    </dt>
-    <dd>
-      <%= @current_user.private %>
-    </dd>
+    <div class="card-body">
+      <dl class="row">
+        <dt class="col-sm-3">
+          Private
+        </dt>
+        <dd class="col-sm-9">
+          <%= @current_user.private %>
+        </dd>
 
-    <dt>
-      Followers
-    </dt>
-    <dd>
-      <%= @current_user.receivedfollowrequests.count %>
-    </dd>
+        <dt class="col-sm-3">
+          Followers
+        </dt>
+        <dd class="col-sm-9">
+          <%= @current_user.receivedfollowrequests.count %>
+        </dd>
 
-    <dt>
-      Following
-    </dt>
-    <dd>
-      <%= @current_user.sentfollowrequests.count %>
-    </dd>
+        <dt class="col-sm-3">
+          Following
+        </dt>
+        <dd class="col-sm-9">
+          <%= @current_user.sentfollowrequests.count %>
+        </dd>
+      </dl>
 
-    <nav>
-      <ul>
-        <li>
-          <a href="/users/<%= @current_user.username %>">Profile</a>
-        </li>
-        <li>
-          <a href="/users/<%= @current_user.username %>/liked_photos">Liked photos</a>
-        </li>
-        <li>
-          <a href="/users/<%= @current_user.username %>/feed">Feed</a>
-        </li>
-        <li>
-          <a href="/users/<%= @current_user.username %>/discover">Discover</a>
-        </li>
-      </ul>
-    </nav>
-
-  </div>
+      <nav>
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link" href="/users/<%= @current_user.username %>">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/<%= @current_user.username %>/liked_photos">Liked photos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/<%= @current_user.username %>/feed">Feed</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/<%= @current_user.username %>/discover">Discover</a>
+          </li>
+        </ul>
+      </nav>
 
   <h2>Feed (<%= @current_user.sentfollowrequests.where({ :status => "accepted"}).count %>) 
 
